# NotionDBManager

./: .env.example  .gitignore  README.md  pyproject.toml
notion_db_manager/: __main__.py  cli.py  constants.py  env.py  exceptions.py  json_storage.py  models.py  notion_api.py  paths.py
notion_db_manager/notion/: __init__.py  client.py  serializers.py
notion_db_manager/services/: context.py  reader.py  validation.py  writer.py
